--- a/src/pages/Orcamentos.css
+++ b/src/pages/Orcamentos.css
@@ -2,16 +2,65 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+}
+
+.Modal {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    right: 40px;
+    bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+.Modal form {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.Modal form button {
+
+    margin-top: 20px;
+
+}
+
+.Overlay {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5)
 }
 
 #po-list article {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     
     width: 50%;
     background-color: #fff;
     
    
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
+}
+
+#po-list article section{
+ 
+   
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+
+    margin-top: 10px;
 }
 
 #po-list article header {
